# protium-db

./: .coveragerc  .gitignore  pyproject.toml  pytest.ini
protium/: __init__.py  model.py
test/: test_model.py
test/db-test/model1/: .model.yaml
test/db-test/model2/: .model.yaml
test/db-test/model3/: .model.yaml
